# python-project-52

./: .coveragerc  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  ruff.toml  sonar-project.properties
.github/workflows/: my_check.yml
staticfiles_collected/: button.js  index.css  login.css  main.css  task.css  users.css
task_manager/: forms.py  menu.py  settings.py  urls.py  views.py
task_manager/labels/: models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/static/: button.js  index.css  login.css  main.css  task.css  users.css
task_manager/statuses/: admin.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_created_at.py
task_manager/task/: apps.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/task/migrations/: 0001_initial.py  0002_remove_task_label_task_label.py  0003_alter_task_label.py  0004_rename_label_task_labels.py
task_manager/templates/: base.html  create.html  index.html  login.html
task_manager/templates/labels/: create_label.html  delete_label.html  labels_list.html
task_manager/templates/statuses/: create.html  create_statuses.html  delete_status.html  statuses_list.html
task_manager/templates/task/: create_task.html  delete_task.html  task.html  tasks_list.html
task_manager/templates/users/: create.html  create_user.html  delete.html  delete_user.html  users.html
task_manager/users/: forms.py  tests.py  urls.py  views.py
