[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.1.0",
    "django>=6.0.1",
    "django-filter>=25.2",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "rollbar>=1.3.0",
    "ruff>=0.14.10",
    "whitenoise>=6.11.0",
]

[build-system] 
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel] 
packages = ["task_manager"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
]

[tool.pytest.ini_options]
# Заменяет --ds=task_manager.settings
DJANGO_SETTINGS_MODULE = "task_manager.settings"

# Заменяет -o "python_files=tests.py test_*.py"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

# Заменяет --cov=task_manager и добавляет отчет в терминале
addopts = "--cov=task_manager --cov-report=xml"

[tool.coverage.report]
show_missing = true
skip_empty = true
precision = 1